--- a/plugins/clock-view/Makefile.am
+++ b/plugins/clock-view/Makefile.am
@@ -1,4 +1,5 @@
 plugindir = $(libdir)/xfdashboard/plugins
+PLUGIN_ID = clock-view
 
 AM_CPPFLAGS = \
 	-I$(top_builddir) \
@@ -6,7 +7,7 @@ AM_CPPFLAGS = \
 	-DG_LOG_DOMAIN=\"xfdashboard-plugin-clock_view\" \
 	-DLIBEXECDIR=\"$(libexecdir)\" \
 	-DPACKAGE_LOCALE_DIR=\"$(localedir)\" \
-	-DPLUGIN_ID=\"de.froevel.xfdashboard.clock\"
+	-DPLUGIN_ID=\"$(PLUGIN_ID)\"
 
 plugin_LTLIBRARIES = \
 	clock-view.la
@@ -26,8 +27,10 @@ clock_view_la_CFLAGS = \
 clock_view_la_LDFLAGS = \
 	-avoid-version \
 	-export-dynamic \
+	-export-symbols-regex '^plugin_init$$' \
 	-no-undefined \
 	-module \
+	-shared \
 	$(PLATFORM_LDFLAGS)
 
 clock_view_la_LIBADD = \
