--- a/plugins/clock-view/Makefile.am
+++ b/plugins/clock-view/Makefile.am
@@ -24,6 +24,7 @@ clock_view_la_CFLAGS = \
 	$(GTK_CFLAGS) \
 	$(CLUTTER_CFLAGS) \
 	$(LIBXFCONF_CFLAGS) \
+	$(GARCON_CFLAGS) \
 	$(PLATFORM_CFLAGS)
 
 clock_view_la_LDFLAGS = \
@@ -40,6 +41,7 @@ clock_view_la_LIBADD = \
 	$(GTK_LIBS) \
 	$(CLUTTER_LIBS) \
 	$(LIBXFCONF_LIBS) \
+	$(GARCON_LIBS) \
 	$(top_builddir)/libxfdashboard/libxfdashboard.la
 
 CLEANFILES = \
