--- a/plugins/hot-corner/Makefile.am
+++ b/plugins/hot-corner/Makefile.am
@@ -15,6 +15,8 @@ plugin_LTLIBRARIES = \
 hot_corner_la_SOURCES = \
 	hot-corner.c \
 	hot-corner.h \
+	hot-corner-settings.c \
+	hot-corner-settings.h \
 	plugin.c
 
 hot_corner_la_CFLAGS = \
