--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -11,73 +11,80 @@ data/themes/xfdashboard-dark/xfdashboard.theme.in.in
 data/themes/xfdashboard-mint/xfdashboard.theme.in.in
 data/themes/xfdashboard-moranga/xfdashboard.theme.in.in
 data/themes/xfdashboard-wine/xfdashboard.theme.in.in
+libxfdashboard/action-button.c
+libxfdashboard/actor.c
+libxfdashboard/application-button.c
+libxfdashboard/application.c
+libxfdashboard/application-database.c
+libxfdashboard/application-tracker.c
+libxfdashboard/applications-menu-model.c
+libxfdashboard/applications-search-provider.c
+libxfdashboard/applications-view.c
+libxfdashboard/background.c
+libxfdashboard/binding.c
+libxfdashboard/bindings-pool.c
+libxfdashboard/box-layout.c
+libxfdashboard/button.c
+libxfdashboard/click-action.c
+libxfdashboard/collapse-box.c
+libxfdashboard/css-selector.c
+libxfdashboard/desktop-app-info.c
+libxfdashboard/drag-action.c
+libxfdashboard/drop-action.c
+libxfdashboard/dynamic-table-layout.c
+libxfdashboard/emblem-effect.c
+libxfdashboard/enums.c
+libxfdashboard/fill-box-layout.c
+libxfdashboard/focusable.c
+libxfdashboard/focus-manager.c
+libxfdashboard/image-content.c
+libxfdashboard/live-window.c
+libxfdashboard/live-workspace.c
+libxfdashboard/marshal.c
+libxfdashboard/outline-effect.c
+libxfdashboard/plugin.c
+libxfdashboard/plugins-manager.c
+libxfdashboard/quicklaunch.c
+libxfdashboard/scaled-table-layout.c
+libxfdashboard/scrollbar.c
+libxfdashboard/search-manager.c
+libxfdashboard/search-provider.c
+libxfdashboard/search-result-container.c
+libxfdashboard/search-result-set.c
+libxfdashboard/search-view.c
+libxfdashboard/stage.c
+libxfdashboard/stage-interface.c
+libxfdashboard/stylable.c
+libxfdashboard/text-box.c
+libxfdashboard/theme.c
+libxfdashboard/theme-css.c
+libxfdashboard/theme-effects.c
+libxfdashboard/theme-layout.c
+libxfdashboard/toggle-button.c
+libxfdashboard/tooltip-action.c
+libxfdashboard/utils.c
+libxfdashboard/view.c
+libxfdashboard/view-manager.c
+libxfdashboard/viewpad.c
+libxfdashboard/view-selector.c
+libxfdashboard/window-content.c
+libxfdashboard/windows-view.c
+libxfdashboard/window-tracker.c
+libxfdashboard/window-tracker-monitor.c
+libxfdashboard/window-tracker-window.c
+libxfdashboard/window-tracker-workspace.c
+libxfdashboard/workspace-selector.c
 plugins/clock-view/clock-view.c
+plugins/clock-view/clock-view-settings.c
 plugins/clock-view/plugin.c
 plugins/gnome-shell-search-provider/gnome-shell-search-provider.c
 plugins/gnome-shell-search-provider/plugin.c
+plugins/hot-corner/hot-corner-settings.c
+plugins/hot-corner/hot-corner.c
+plugins/hot-corner/plugin.c
+settings/general.c
+settings/plugins.c
+settings/themes.c
 settings/main.c
 settings/settings.c
-xfdashboard/action-button.c
-xfdashboard/actor.c
-xfdashboard/application-button.c
-xfdashboard/application.c
-xfdashboard/application-database.c
-xfdashboard/application-tracker.c
-xfdashboard/applications-menu-model.c
-xfdashboard/applications-search-provider.c
-xfdashboard/applications-view.c
-xfdashboard/background.c
-xfdashboard/binding.c
-xfdashboard/bindings-pool.c
-xfdashboard/box-layout.c
-xfdashboard/button.c
-xfdashboard/click-action.c
-xfdashboard/collapse-box.c
-xfdashboard/css-selector.c
-xfdashboard/desktop-app-info.c
-xfdashboard/drag-action.c
-xfdashboard/drop-action.c
-xfdashboard/dynamic-table-layout.c
-xfdashboard/emblem-effect.c
-xfdashboard/enums.c
-xfdashboard/fill-box-layout.c
-xfdashboard/focusable.c
-xfdashboard/focus-manager.c
-xfdashboard/image-content.c
-xfdashboard/live-window.c
-xfdashboard/live-workspace.c
 xfdashboard/main.c
-xfdashboard/marshal.c
-xfdashboard/outline-effect.c
-xfdashboard/plugin.c
-xfdashboard/plugins-manager.c
-xfdashboard/quicklaunch.c
-xfdashboard/scaled-table-layout.c
-xfdashboard/scrollbar.c
-xfdashboard/search-manager.c
-xfdashboard/search-provider.c
-xfdashboard/search-result-container.c
-xfdashboard/search-result-set.c
-xfdashboard/search-view.c
-xfdashboard/stage.c
-xfdashboard/stage-interface.c
-xfdashboard/stylable.c
-xfdashboard/text-box.c
-xfdashboard/theme.c
-xfdashboard/theme-css.c
-xfdashboard/theme-effects.c
-xfdashboard/theme-layout.c
-xfdashboard/toggle-button.c
-xfdashboard/tooltip-action.c
-xfdashboard/utils.c
-xfdashboard/view.c
-xfdashboard/view-manager.c
-xfdashboard/viewpad.c
-xfdashboard/view-selector.c
-xfdashboard/window-content.c
-xfdashboard/windows-view.c
-xfdashboard/window-tracker.c
-xfdashboard/window-tracker-monitor.c
-xfdashboard/window-tracker-window.c
-xfdashboard/window-tracker-workspace.c
-xfdashboard/workspace-selector.c
