Silence compiler warning about using deprecated actor state access macros by using functions introduced with Clutter 1.23.4
We update the source code to use state access functions, e.g. clutter_actor_is_visible(), instead of the old macros, e.g. CLUTTER_ACTOR_IS_VISIBLE(). But also implement a compatibility layer which "redirects" functions to macros again when compiling and linking against Clutter older than 1.23.4.

This is the first fix for issue GH #117

--- a/libxfdashboard/Makefile.am
+++ b/libxfdashboard/Makefile.am
@@ -38,6 +38,7 @@ libxfdashboard_la_headers = \
 	button.h \
 	click-action.h \
 	collapse-box.h \
+	compat.h \
 	css-selector.h \
 	desktop-app-info.h \
 	drag-action.h \
