Implement our own model class and replace ClutterModel with new XfdashboardModel because ClutterModel is deprecated since Clutter version 1.24. This new model implementation should be compatible to all Clutter version and silence compiler warnings when compiled agaist Clutter 1.24 or higher.
This commit should finally fix for issue GH #117

--- a/libxfdashboard/Makefile.am
+++ b/libxfdashboard/Makefile.am
@@ -51,6 +51,7 @@ libxfdashboard_la_headers = \
 	image-content.h \
 	live-window.h \
 	live-workspace.h \
+	model.h \
 	outline-effect.h \
 	plugin.h \
 	plugins-manager.h \
@@ -117,6 +118,7 @@ libxfdashboard_la_SOURCES = \
 	image-content.c \
 	live-window.c \
 	live-workspace.c \
+	model.c \
 	outline-effect.c \
 	plugin.c \
 	plugins-manager.c \
