Add GTK_CFLAGS and GTK_LIBS to Makefile.am of xfdashboard. At least distributions derived from upcoming Ubuntu 16.04 need these two statements to compile and link xfdashboard main application successfully. Otherwise the compiler cries for missing gtk_* symbols.

--- a/xfdashboard/Makefile.am
+++ b/xfdashboard/Makefile.am
@@ -18,6 +18,7 @@ xfdashboard_CFLAGS = \
 	$(GLIB_CFLAGS) \
 	$(LIBXFCONF_CFLAGS) \
 	$(LIBXFCE4UTIL_CFLAGS) \
+	$(GTK_CFLAGS) \
 	$(PLATFORM_CFLAGS)
 
 xfdashboard_LDADD = \
@@ -25,6 +26,7 @@ xfdashboard_LDADD = \
 	$(GLIB_LIBS) \
 	$(LIBXFCONF_LIBS) \
 	$(LIBXFCE4UTIL_LIBS) \
+	$(GTK_LIBS) \
 	$(top_builddir)/libxfdashboard/libxfdashboard.la
 
 xfdashboard_LDFLAGS = \
