--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -41,6 +41,7 @@ libxfdashboard/image-content.c
 libxfdashboard/live-window.c
 libxfdashboard/live-workspace.c
 libxfdashboard/marshal.c
+libxfdashboard/model.c
 libxfdashboard/outline-effect.c
 libxfdashboard/plugin.c
 libxfdashboard/plugins-manager.c
