--- a/data/appdata/xfdashboard.appdata.xml.in
+++ b/data/appdata/xfdashboard.appdata.xml.in
@@ -59,6 +59,14 @@
 	</keywords>
 
 	<releases>
+		<release version="0.6.0" timestamp="1463772864">
+			<description>
+				<_p>This stable version introduces lots of new features like
+				plugins and application tracker. It also contains a huge
+				collection of other larger and smaller improvements.
+				</_p>
+			</description>
+		</release>
 		<release version="0.5.92" timestamp="1459448722">
 			<description>
 				<_p>This unstable development fixes crashes in search view.
