Add new plugin 'middle-click-window-close' which (when enabled) allows the user to close windows in windows view with a middle click. This plugin is not configurable.
This commit addresses GH #128

--- a/configure.ac.in
+++ b/configure.ac.in
@@ -277,6 +277,7 @@ plugins/Makefile
 plugins/clock-view/Makefile
 plugins/gnome-shell-search-provider/Makefile
 plugins/hot-corner/Makefile
+plugins/middle-click-window-close/Makefile
 po/Makefile.in
 settings/Makefile
 xfdashboard/Makefile
