--- a/data/appdata/xfdashboard.appdata.xml.in
+++ b/data/appdata/xfdashboard.appdata.xml.in
@@ -59,6 +59,12 @@
 	</keywords>
 
 	<releases>
+		<release version="0.7.0" timestamp="1473183039">
+			<description>
+				<_p>This unstable development fixes introduces pop-up menus.
+				</_p>
+			</description>
+		</release>
 		<release version="0.6.0" timestamp="1463772864">
 			<description>
 				<_p>This stable version introduces lots of new features like
