--- a/configure.ac.in
+++ b/configure.ac.in
@@ -11,7 +11,7 @@ m4_define([xfdashboard_version_major], [0])
 m4_define([xfdashboard_version_minor], [7])
 m4_define([xfdashboard_version_micro], [0])
 m4_define([xfdashboard_version_build], [@REVISION@])
-m4_define([xfdashboard_version_tag],   [git])
+m4_define([xfdashboard_version_tag],   [])
 m4_define([xfdashboard_version], [xfdashboard_version_major().xfdashboard_version_minor().xfdashboard_version_micro()ifelse(xfdashboard_version_tag(), [git], [xfdashboard_version_tag().xfdashboard_version_build()], [xfdashboard_version_tag()])])
 
 dnl **************************************
