Refactor XfdashboardButton into XfdashboardLabel and make XfdashboardButton a sub-class of it.
XfdashboardLabel is like the previous XfdashboardButton but without "click" signal and XfdashboardButton is now a sub-class of it which just handles the additional "click" signal.

--- a/libxfdashboard/Makefile.am
+++ b/libxfdashboard/Makefile.am
@@ -49,6 +49,7 @@ libxfdashboard_la_headers = \
 	focusable.h \
 	focus-manager.h \
 	image-content.h \
+	label.h \
 	live-window.h \
 	live-workspace.h \
 	model.h \
@@ -118,6 +119,7 @@ libxfdashboard_la_SOURCES = \
 	focusable.c \
 	focus-manager.c \
 	image-content.c \
+	label.c \
 	live-window.c \
 	live-workspace.c \
 	model.c \
