--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ libxfdashboard/enums.[ch]
 libxfdashboard/marshal.[ch]
 libxfdashboard/stamp-marshal.h
 libxfdashboard/libxfdashboard.pc
+libxfdashboard/version.h
 settings/xfdashboard-settings
 xfdashboard/xfdashboard
 
