--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -14,9 +14,9 @@ data/themes/xfdashboard-wine/xfdashboard.theme.in.in
 libxfdashboard/action-button.c
 libxfdashboard/actor.c
 libxfdashboard/application-button.c
-libxfdashboard/application.c
 libxfdashboard/application-database.c
 libxfdashboard/application-tracker.c
+libxfdashboard/application.c
 libxfdashboard/applications-menu-model.c
 libxfdashboard/applications-search-provider.c
 libxfdashboard/applications-view.c
@@ -35,9 +35,11 @@ libxfdashboard/dynamic-table-layout.c
 libxfdashboard/emblem-effect.c
 libxfdashboard/enums.c
 libxfdashboard/fill-box-layout.c
-libxfdashboard/focusable.c
 libxfdashboard/focus-manager.c
+libxfdashboard/focusable.c
 libxfdashboard/image-content.c
+libxfdashboard/label.c
+libxfdashboard/live-window-simple.c
 libxfdashboard/live-window.c
 libxfdashboard/live-workspace.c
 libxfdashboard/marshal.c
@@ -45,7 +47,9 @@ libxfdashboard/model.c
 libxfdashboard/outline-effect.c
 libxfdashboard/plugin.c
 libxfdashboard/plugins-manager.c
-libxfdashboard/popup-menu-item-meta.c
+libxfdashboard/popup-menu-item-button.c
+libxfdashboard/popup-menu-item-separator.c
+libxfdashboard/popup-menu-item.c
 libxfdashboard/popup-menu.c
 libxfdashboard/quicklaunch.c
 libxfdashboard/scaled-table-layout.c
@@ -55,27 +59,27 @@ libxfdashboard/search-provider.c
 libxfdashboard/search-result-container.c
 libxfdashboard/search-result-set.c
 libxfdashboard/search-view.c
-libxfdashboard/stage.c
 libxfdashboard/stage-interface.c
+libxfdashboard/stage.c
 libxfdashboard/stylable.c
 libxfdashboard/text-box.c
-libxfdashboard/theme.c
 libxfdashboard/theme-css.c
 libxfdashboard/theme-effects.c
 libxfdashboard/theme-layout.c
+libxfdashboard/theme.c
 libxfdashboard/toggle-button.c
 libxfdashboard/tooltip-action.c
 libxfdashboard/utils.c
-libxfdashboard/view.c
 libxfdashboard/view-manager.c
-libxfdashboard/viewpad.c
 libxfdashboard/view-selector.c
+libxfdashboard/view.c
+libxfdashboard/viewpad.c
 libxfdashboard/window-content.c
-libxfdashboard/windows-view.c
-libxfdashboard/window-tracker.c
 libxfdashboard/window-tracker-monitor.c
 libxfdashboard/window-tracker-window.c
 libxfdashboard/window-tracker-workspace.c
+libxfdashboard/window-tracker.c
+libxfdashboard/windows-view.c
 libxfdashboard/workspace-selector.c
 plugins/clock-view/clock-view.c
 plugins/clock-view/clock-view-settings.c
