--- a/data/appdata/xfdashboard.appdata.xml.in
+++ b/data/appdata/xfdashboard.appdata.xml.in
@@ -59,10 +59,19 @@
 	</keywords>
 
 	<releases>
+		<release version="0.7.2" timestamp="1494826045">
+			<description>
+				<_p>This unstable development improves loading performance of
+				images and icon, adds a fine-grained debugging system and introduces
+				an interface for multiple backends but only X11 is still the one
+				only one supported.
+				</_p>
+			</description>
+		</release>
 		<release version="0.7.1" timestamp="1488792398">
 			<description>
 				<_p>This unstable development introduces child windows shown
-				next tto the main window.
+				next to the main window.
 				</_p>
 			</description>
 		</release>
