--- a/libxfdashboard/Makefile.am
+++ b/libxfdashboard/Makefile.am
@@ -253,6 +253,7 @@ endif
 gdk_headers = \
 	gdk/window-content-gdk.h \
 	gdk/window-tracker-gdk.h \
+	gdk/window-tracker-backend-gdk.h \
 	gdk/window-tracker-monitor-gdk.h \
 	gdk/window-tracker-window-gdk.h \
 	gdk/window-tracker-workspace-gdk.h
@@ -260,6 +261,7 @@ gdk_headers = \
 gdk_sources = \
 	gdk/window-content-gdk.c \
 	gdk/window-tracker-gdk.c \
+	gdk/window-tracker-backend-gdk.c \
 	gdk/window-tracker-monitor-gdk.c \
 	gdk/window-tracker-window-gdk.c \
 	gdk/window-tracker-workspace-gdk.c
