--- a/configure.ac.in
+++ b/configure.ac.in
@@ -22,8 +22,7 @@ m4_define([clutter_minimum_version], [1.12.0])
 m4_define([glib_minimum_version], [2.32])
 m4_define([gio_minimum_version], [2.32])
 m4_define([garcon_minimum_version], [0.2.0])
-m4_define([xfconf_minimum_version], [4.10.0])
-m4_define([dbus_glib_minimum_version], [0.98])
+m4_define([xfconf_minimum_version], [4.13.0])
 m4_define([xcomposite_minimum_version], [0.2])
 m4_define([intltool_minimum_version], [0.35])
 m4_define([gtk_minimum_version], [3.2])
@@ -203,14 +202,7 @@ dnl ***********************************
 XDT_CHECK_PACKAGE([LIBWNCK], [libwnck-3.0], [wnck_minimum_version])
 XDT_CHECK_PACKAGE([CLUTTER_COGL], [clutter-cogl-1.0], [clutter_minimum_version])
 XDT_CHECK_PACKAGE([GTK], [gtk+-3.0], [gtk_minimum_version])
-XDT_CHECK_PACKAGE([GLIB], [glib-2.0], [glib_minimum_version])
-XDT_CHECK_PACKAGE([GIO], [gio-2.0], [gio_minimum_version])
-XDT_CHECK_PACKAGE([GIO_UNIX], [gio-unix-2.0], [gio_minimum_version])
-XDT_CHECK_PACKAGE([GARCON], [garcon-1], [garcon_minimum_version])
-XDT_CHECK_PACKAGE([LIBXFCONF], [libxfconf-0], [xfconf_minimum_version])
-XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0],[libxfce4util_minimum_version])
-XDT_CHECK_PACKAGE([LIBXFCE4UI], [libxfce4ui-2],[libxfce4ui_minimum_version])
-XDT_CHECK_PACKAGE([DBUS_GLIB], [dbus-glib-1], [dbus_glib_minimum_version], [
+XDT_CHECK_PACKAGE([GLIB], [glib-2.0], [glib_minimum_version], [
 	XDT_PROG_PKG_CONFIG()
 
 	GLIB_MKENUMS=`$PKG_CONFIG --variable=glib_mkenums glib-2.0`
@@ -218,6 +210,12 @@ XDT_CHECK_PACKAGE([DBUS_GLIB], [dbus-glib-1], [dbus_glib_minimum_version], [
 
 	GLIB_GENMARSHAL=`$PKG_CONFIG --variable=glib_genmarshal glib-2.0`
 	AC_SUBST(GLIB_GENMARSHAL)])
+XDT_CHECK_PACKAGE([GIO], [gio-2.0], [gio_minimum_version])
+XDT_CHECK_PACKAGE([GIO_UNIX], [gio-unix-2.0], [gio_minimum_version])
+XDT_CHECK_PACKAGE([GARCON], [garcon-1], [garcon_minimum_version])
+XDT_CHECK_PACKAGE([LIBXFCONF], [libxfconf-0], [xfconf_minimum_version])
+XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0],[libxfce4util_minimum_version])
+XDT_CHECK_PACKAGE([LIBXFCE4UI], [libxfce4ui-2],[libxfce4ui_minimum_version])
 
 dnl **********************************************
 dnl *** Check for Clutter and its backend: GDK ***
@@ -335,7 +333,6 @@ echo "  garcon:           $GARCON_VERSION"
 echo "  libxconf:         $LIBXFCONF_VERSION"
 echo "  libxfce4ui:       $LIBXFCE4UI_VERSION"
 echo "  libxfce4util:     $LIBXFCE4UTIL_VERSION"
-echo "  dbus-glib:        $DBUS_GLIB_VERSION"
 echo
 echo "Tools used:"
 echo "  glib-genmarshal:  $GLIB_GENMARSHAL"
@@ -345,4 +342,9 @@ echo "Features enabled:"
 echo "  XComposite:       $enabled_x11_extension_composite"
 echo "  XDamage:          $enabled_x11_extension_damage"
 echo "  Xinerama:         $enabled_x11_extension_xinerama"
+if test "x$ac_clutter_gdk" = "xyes" ; then
+echo "  GDK backend:      yes"
+else
+echo "  GDK backend:      no"
+fi
 echo
