--- a/libxfdashboard/libxfdashboard.pc.in
+++ b/libxfdashboard/libxfdashboard.pc.in
@@ -5,7 +5,7 @@ includedir=@includedir@
 
 Name: @PACKAGE_TARNAME@
 Description: Library for xfdashboard
-Requires: libwnck-3.0 clutter-1.0 clutter-cogl-1.0 gtk+-3.0 glib-2.0 gio-2.0 gio-unix-2.0 garcon-1 libxfconf-0 libxfce4util-1.0 libxfce4ui-2
+Requires: @XFDASHBOARD_REQUIRES@
 Version: @PACKAGE_VERSION@
 Libs: -L${libdir} -lxfdashboard
 Cflags: -I${includedir}/xfdashboard
