--- a/configure.ac.in
+++ b/configure.ac.in
@@ -235,23 +235,19 @@ AM_CONDITIONAL([DBUS_GLIB], [test x"$ac_dbus_glib" = x"yes"])
 dnl **********************************************
 dnl *** Check for Clutter and its backend: GDK ***
 dnl **********************************************
-XDT_CHECK_PACKAGE([CLUTTER], [clutter-1.0], [clutter_minimum_version], [XFDASHBOARD_REQUIRES="$XFDASHBOARD_REQUIRES clutter-1.0 clutter-gdk-1.0"])
-XDT_CHECK_PACKAGE([CLUTTER_COGL], [clutter-cogl-1.0], [clutter_minimum_version], [XFDASHBOARD_REQUIRES="$XFDASHBOARD_REQUIRES clutter-cogl-1.0"])
-
-dnl **********************************************
-dnl *** Check for Clutter and its backend: GDK ***
-dnl **********************************************
 BACKENDS="x11"
 
 XDT_CHECK_PACKAGE([CLUTTER], [clutter-1.0], [clutter_minimum_version], [
-	XDT_CHECK_PACKAGE([CLUTTER_GDK], [clutter-gdk-1.0], [clutter_minimum_version],
-	[ac_clutter_gdk=yes], [ac_clutter_gdk=no])]
+	XFDASHBOARD_REQUIRES="$XFDASHBOARD_REQUIRES clutter-1.0"
+	XDT_CHECK_PACKAGE([CLUTTER_COGL], [clutter-cogl-1.0], [clutter_minimum_version], [XFDASHBOARD_REQUIRES="$XFDASHBOARD_REQUIRES clutter-cogl-1.0"])
+	XDT_CHECK_PACKAGE([CLUTTER_GDK], [clutter-gdk-1.0], [clutter_minimum_version], [ac_clutter_gdk=yes], [ac_clutter_gdk=no])]
 )
 
 HAVE_BACKEND_GDK=""
 AM_CONDITIONAL([XFDASHBOARD_BUILD_WITH_BACKEND_GDK], [test x"$ac_clutter_gdk" = x"yes"])
 if test "x$ac_clutter_gdk" = xyes; then
 	BACKENDS="$BACKENDS gdk"
+	XFDASHBOARD_REQUIRES="$XFDASHBOARD_REQUIRES clutter-gdk-1.0"
 	AC_DEFINE([HAVE_BACKEND_GDK], [1], [Define if GDK backend is available])
 fi
 AC_SUBST(HAVE_BACKEND_GDK)
